# bearer-forward-auth

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
src/bearer_auth/: __init__.py  api.py  auth.py  cli.py  server.py  tokens.py
