[project]
name = "bearer-auth"
version = "0.1.0"
description = "Traefik ForwardAuth Bearer token verifier."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
bearer-auth = "bearer_auth.cli:main"

[project.urls]
Repository = "https://github.com/dhoon-dev/bearer-forward-auth"

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a23",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
